--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-/*About*/
+/*About
 .navbar-custom {
     margin-bottom: 0;
-}
+}*/
 .bckg-pink{
        background-color: #f2755A;
  
@@ -9,7 +9,9 @@
 .bckg-red{
     background-color: #F05F40;
 }
-
+.txt-w{
+    color:white;
+}
 
 /*COMIENZO --> Mis Trabajos - Footer -> Reina*/
 .mistrabajos-section img {
@@ -18,7 +20,9 @@
 .padding-0 div {
     padding: 0%!important;
 }
-
+.github-section {
+    background-color: #222222;
+}
 /*FINAL --> Mis Trabajos - Footer -> Reina*/
 
 
