--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-/*About
+/*About*/
 .navbar-custom {
     margin-bottom: 0;
-}*/
+}
 .bckg-pink{
        background-color: #f2755A;
  
@@ -23,6 +23,27 @@
 .github-section {
     background-color: #222222;
 }
+.github-section h3 {
+    color: white;
+    text-align: center;
+    margin-top: 3%;
+    margin-top: 2%;
+}
+.button-github {
+    background-color: white;
+    border-radius: 20px;
+    padding: 0.7%;
+    color: #222222;
+    text-align: center;
+    width: 9%;
+    font-weight: 700;
+    margin: auto;
+    margin-bottom: 2.5%;
+    margin-top: 1%;
+    font-size: 11px;
+}
 /*FINAL --> Mis Trabajos - Footer -> Reina*/
 
 
+/*oshe que fue, que telible. yo no he modificado nada 
+e.e  ni si quiera empiezo xd*/
