--- a/css/utilities.css
+++ b/css/utilities.css
@@ -37,6 +37,9 @@ strong {
 .pt-23{
 	padding-top: 23%
 }
+.pt-20{
+	padding-bottom:20%;
+}
 
 .pb-3{
 	padding-bottom: 3%;
@@ -147,12 +150,7 @@ a {
     text-decoration: none !important;
 }
 
-.lh-1.2{
-	line-height: 1.2;
-}
-.lh-1.5{
-	line-height: 1.5;
-}
+
 .lh2{
 	line-height: 2.0
 }
