--- a/css/creative.css
+++ b/css/creative.css
@@ -2,7 +2,6 @@
 /* Inserta tu codigo CSS aqui */
 .navbar{
   padding-bottom: 10px;
-  padding-top: 10px;
   background-color: transparent;
   position: fixed;
   width: 100%;
@@ -82,7 +81,7 @@ hr{
   padding-top: 15px;
 }
 .navbar-brand:hover{
-  color: #0dc0c0;
+  color: #f2755A;
 }
 
 .header.active .navbar-brand{
@@ -90,7 +89,7 @@ hr{
 }
 
 .header.active .navbar-brand:hover{
-  color:   #0dc0c0;
+  color:   #f2755A;
 }
 
 
@@ -99,7 +98,8 @@ hr{
 }
 
 .navbar-nav > li > a:hover{
-  color: #0dc0c0;
+  color: #f2755A;
+  background-color:transparent;
 }
 
 .header.active .navbar-nav > li > a{
@@ -107,7 +107,7 @@ hr{
 }
 
 .header.active .navbar-nav > li > a:hover{
-  color: #0dc0c0;
+  color: #f2755A;
 }
 
 /* Menu active */
@@ -159,8 +159,97 @@ hr{
     .navbar-nav > li > a {
       color: black;
     }
+    
+    .title{
+      padding-top: 5%;
+      padding-left: 5%;
+      padding-right: 5%;
+      font-size: 25px;
+    }
 }
-.fa{
+
+/*.fa{*/
+/*  color:#F05F40;*/
+/*  font-size: 270%;*/
+/*}*/
+/*.effect .fa {*/
+/*    box-shadow: 0 0 0 4px white;*/
+/*    -webkit-transition: color 0.3s;*/
+/*    -moz-transition: color 0.3s;*/
+/*    transition: color 0.3s;*/
+/*}*/
+
+
+
+.hi-icon {
   color:#F05F40;
-  font-size: 270%;
+	display: inline-block;
+	cursor: pointer;
+	margin: 15px 30px;
+	width: 110px;
+	height: 110px;
+	border-radius: 50%;
+	text-align: center;
+	position: relative;
+	z-index: 1;
+	
+}
+.hi-icon.fa-diamond{
+  padding-top:8%;
+}
+.hi-icon.fa-paper-plane{
+  padding-top: 7%;
+  padding-right: 4%;
+}
+.hi-icon.fa-newspaper-o{
+  padding-top: 8%;
+  padding-right: 1%;
+}
+.hi-icon.fa-heart{
+  padding-top: 10%;
+}
+/* Effect 3 */
+.hi-icon-effect-3 .hi-icon {
+	box-shadow: 0 0 0 4px #fff;
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+
+.hi-icon-effect-3 .hi-icon:after {
+	top: -2px;
+	left: -2px;
+	padding: 2px;
+	z-index: -1;
+	background: red;
+	-webkit-transition: -webkit-transform 0.2s, opacity 0.3s;
+	-moz-transition: -moz-transform 0.2s, opacity 0.3s;
+	transition: transform 0.2s, opacity 0.3s;
+}
+
+
+/* Effect 3b */
+.hi-icon-effect-3b .hi-icon {
+	color: #F05F40;
+}
+
+.hi-icon-effect-3b .hi-icon:hover {
+	color: #fff;
+	background: #F05F40;
+}
+
+.hi-icon-effect-3b .hi-icon:after {
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	-ms-transform: scale(1.3);
+	transform: scale(1.3);
+	opacity: 0;
+}
+
+.hi-icon-effect-3b .hi-icon:hover:after {
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
 }
