--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,19 @@
 .txt-w{
     color:white;
 }
+.abt-hr{
+        border: 2px solid white;
+} /*holi*/
+/*SERVS SECTION*/
+
 
 /*COMIENZO --> Mis Trabajos - Footer -> Reina*/
 .mistrabajos-section img {
     width: 100%;
+}
+.margin-15 {
+    margin-right: -15px!important;
+    margin-left: -15px!important;
 }
 .padding-0 div {
     padding: 0%!important;
@@ -32,18 +41,47 @@
 .button-github {
     background-color: white;
     border-radius: 20px;
-    padding: 0.7%;
     color: #222222;
+    padding: 1%;
+    padding-right: 2%;
+    padding-left: 2%;
     text-align: center;
-    width: 9%;
     font-weight: 700;
     margin: auto;
     margin-bottom: 2.5%;
     margin-top: 1%;
     font-size: 11px;
+    border-style:none;
 }
+footer h5 {
+    color: #222222;
+    text-align: center;
+}
+footer p {
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 2%;
+}
+footer h3 {
+    margin-top: 5%;
+}
+.phone i {
+    
+    font-size: 37px;
+}
+.email i {
+    
+    font-size: 37px;
+}
+.phone h5 {
+
+}
+.email h5 {
+     
+    padding-bottom: 15%;
+}
+
+
+
+
 /*FINAL --> Mis Trabajos - Footer -> Reina*/
-
-
-/*oshe que fue, que telible. yo no he modificado nada 
-e.e  ni si quiera empiezo xd*/
